[gd_scene load_steps=3 format=3 uid="uid://dk56cgyed6i0u"]

[ext_resource type="Script" path="res://UI/ui_scripts/stats_window.gd" id="1_axxka"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ir11"]
bg_color = Color(0, 0.321569, 0.764706, 0.576471)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0.0392157, 0.0392157, 0.0392157, 0.117647)
shadow_size = 2

[node name="StatsWindow" type="Control"]
z_index = 1
texture_filter = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_axxka")

[node name="StatsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -105.0
offset_right = 100.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7ir11")

[node name="MarginContainer" type="MarginContainer" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleLabel" type="Label" parent="StatsPanel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Current Stats"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="StatsPanel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
